syntax = "proto3";

option java_package = "com.mykhailotiutiun.userservice.grpc";
option java_multiple_files = true;
option java_outer_classname = "UserGrpcProto";

service UserService {
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse);
  rpc ConfirmEmail (ConfirmEmailRequest) returns (ConfirmEmailResponse);
}

message RegisterUserRequest {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string secondName = 4;
  string phoneNumber = 5;
}

message RegisterUserResponse {
  int64 id = 1;
  string email = 2;
  string firstName = 3;
  string secondName = 4;
  string phoneNumber = 5;
  bool enabled = 6;
}

message LoginUserRequest {
  string email = 1;
}

message LoginUserResponse {
  int64 id = 1;
  string email = 2;
  optional string phone_number = 3;
  string password = 4;
  Role role = 5;
  bool enabled = 6;
}

message ConfirmEmailRequest {
  string token = 1;
}

message ConfirmEmailResponse {
}

enum Role {
  ADMIN = 0;
  USER = 1;
}